Fix chrome overscrolling issue on small screens

--- a/client/styles/_vars.scss
+++ b/client/styles/_vars.scss
@@ -1,6 +1,7 @@
 $sidebar-width: 250px;
 $sidebar-transition: 500ms;
 
+$main-base-width: 200px;
 $main-hpadding: 7.5rem;
 $main-vpadding: 2.5rem;
 
